--- a/code/category scraper.ipynb
+++ b/code/category scraper.ipynb
@@ -1,6 +1,58 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#scrape categories from Yelp API category list page\n",
+    "from selenium import webdriver\n",
+    "from selenium.common.exceptions import NoSuchElementException\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.get('https://www.yelp.com/developers/documentation/v2/category_list')\n",
+    "categories = driver.find_elements_by_xpath('//ul[@class=\"bullet-list-round category-list\"]/li')\n",
+    "category = []\n",
+    "for i in range (len(categories)):\n",
+    "    category.append(categories[i].text)\n",
+    "driver.close()\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "category"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
