Calculation of distance between vectors

--- a/code/vector_distance_code.ipynb
+++ b/code/vector_distance_code.ipynb
@@ -613,6 +613,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "text_mean = np.array(filter(lambda x: x != None, map(lambda x: float(x) if (1.0*x == x) else None, full_df.text_sim))).mean()\n",
+    "text_std = np.array(filter(lambda x: x != None, map(lambda x: float(x) if (1.0*x == x) else None, full_df.text_sim))).std()\n",
+    "full_df['text_norm'] = map(norm_text, full_df.text_sim)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {
     "collapsed": false
@@ -1269,6 +1283,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
